--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans+Narrow:wght@400;700&display=swap');
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 nav {
     background-color: cornflowerblue;
     text-align: center;
@@ -13,6 +18,7 @@ nav {
 h2 {
     background-color: cornflowerblue;
     color: white;
+    padding: 10px;
 }
 
 nav > a:hover {
@@ -24,7 +30,8 @@ aside {
 }
 
 .logo {
-    margin: 42%;
+    display: flex;
+    justify-content: center;
 }
 
 nav > a  {
@@ -38,20 +45,38 @@ nav > a  {
 }
 
 aside > h2 {
-    margin: 5px;
+    margin: 15px;
     font-family: "PT Sans Narrow", sans-serif;
+}
+
+aside > p {
+    margin: 15px;
+}
+
+article > h2 {
+    margin: 50px 0px 10px 0px;
+}
+
+article > p {
+    margin: 20px 0px 0px 0px;
+}
+
+main {
+    max-width: 1400px;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
 }
 
 main > article {
     margin: 0px 0px 0px 150px;
-    display: inline-block;
     width: 59%;
     text-align: left;
 }
 
 main > aside {
     margin: 0px 150px 0px 0px;
-    display: inline-block;
     width: 19%;
 }
 
@@ -60,7 +85,7 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-@media (max-width: 570px) {
+@media (max-width: 1000px) {
     main {
         display: flex;
         justify-content: center;
@@ -75,19 +100,20 @@ body {
         margin: 0px;
         width: 100%;
     }
-    .logo {
-        margin: 26%;
-    }
     nav {
         gap: 0px;
     }
+    nav > a {
+        white-space: nowrap;
+        padding: 30px 50px;
+    }
 }
 
-@media (max-width: 560px) {
-    .logo {
-        margin: 19%;
-    }
+@media (max-width: 570px) {
     nav {
         flex-direction: column;
+    }
+    nav > a {
+        width: 100%;
     }
 }
