--- a/style.css
+++ b/style.css
@@ -29,9 +29,13 @@ aside {
     background-color: deepskyblue;
 }
 
-.logo {
+header > div {
     display: flex;
     justify-content: center;
+}
+
+.logo {
+    display: inline-block;
 }
 
 nav > a  {
