--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main > aside {
 body {
     height: 100vh;
     font-family: "Open Sans", sans-serif;
+    background-color: #f3f4f6;
 }
 
 @media (max-width: 1000px) {
