--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+nav a i {
+    color: deepskyblue;
+}
+
 @media (max-width: 1000px) {
     main {
         display: flex;
